# ACT

./: .gitignore  README.md  requirements.txt
kuka arm URDF/: CMakeLists.txt
kuka arm URDF/launch/: gazebo.launch
kuka arm URDF/meshes/: base_link.STL  link1.STL  link3.STL  link6.STL
kuka arm URDF/urdf/: kuka arm URDF.csv
scratch/: check_env.py  check_grasp_timesteps.py  check_losses_at_indices.py  check_stats.py  compare_rollouts.py  debug_eval.py  debug_train_loop.py  inspect_env.py  inspect_source.py  overfit_one_episode.py  play_expert_gui.py  play_policy_gui.py  render_simulations.py  test_determinism.py  test_expert.py  test_expert_gui.py  test_gui_camera.py  test_rollout_with_ckpt.py  test_step_by_step.py
shaka_act/: evaluate_sim.py  record_episodes_sim.py  train.py
shaka_act/config/: config.py
shaka_act/training/: policy.py  utils.py
src/kuka_bringup/: CMakeLists.txt  package.xml
src/kuka_bringup/launch/: kuka.launch.py  kuka_experimental.launch.py
src/kuka_bringup/scripts/: test_move.py
src/kuka_description/: package.xml
src/kuka_description/config/: urdf.rviz
src/kuka_description/launch/: display.launch  display.launch.py  display_experimental.launch.py
src/kuka_description/meshes/: link2.STL  link4.STL  link5.STL
src/kuka_description/urdf/: kr16_2_gazebo.urdf.xacro  kuka arm URDF.urdf  kuka_kr16.urdf.xacro
src/kuka_gazebo/: CMakeLists.txt  package.xml
src/kuka_gazebo/config/: kuka_controllers.yaml
src/kuka_gazebo/launch/: gazebo.launch.py  gazebo_experimental.launch.py
src/kuka_gazebo/worlds/: empty.world
