<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kuka_bringup</name>
  <version>1.0.0</version>
  <description>Combined bringup package for the KUKA KR16 arm, launching both Gazebo and RViz in ROS 2.</description>
  <maintainer email="sanjay@todo.com">Sanjay</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>kuka_description</depend>
  <depend>kuka_gazebo</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
