<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kuka_gazebo</name>
  <version>1.0.0</version>
  <description>Gazebo simulation package for the KUKA KR16 arm, migrated to ROS 2.</description>
  <maintainer email="sanjay@todo.com">Sanjay</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>kuka_description</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joint_trajectory_controller</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
